# httpmorph

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  .ruff.toml  .ruffignore  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  run_tests.sh  setup.py  test_async_concurrent.py  test_async_https.py  test_async_sequential.py  test_async_simple.py  test_bytetunnels.py  test_https_simple.py  test_iocp.py
.github/workflows/: _benchmark.yml  _build_linux.yml  _build_linux_aarch64.yml  _build_macos.yml  _build_windows.yml  _config.yml  _test.yml  benchmark.yml  ci.yml  config.yml  release.yml  test.yml
benchmarks/: benchmark.py  benchmark_httpx.py  benchmark_requests.py  results_requests_macos.md
benchmarks/libs/: __init__.py  aiohttp_bench.py  base.py  curl_cffi_bench.py  httpmorph_bench.py  httpx_bench.py  pycurl_bench.py  requests_bench.py  urllib3_bench.py  urllib_bench.py
benchmarks/res/: benchmark_results_20251026_145432.json  benchmark_results_20251026_145432.md  benchmark_results_20251026_152056.json  benchmark_results_20251026_152056.md
benchmarks/results/darwin/0.1.3/: benchmark.json  benchmark.md
benchmarks/results/darwin/0.2.2/: benchmark.json  benchmark.md
benchmarks/results/darwin/0.2.4/: benchmark.json  benchmark.md
benchmarks/results/linux/0.1.3/: benchmark.json  benchmark.md
benchmarks/results/windows/0.1.3/: benchmark.json  benchmark.md
benchmarks/results/windows/0.2.4/: benchmark.json  benchmark.md
docker/: Dockerfile.benchmark  Dockerfile.test  Dockerfile.windows-mingw  Dockerfile.windows-quick  Dockerfile.windows-test  docker-compose.benchmark.yml  docker-compose.test.yml  docker-compose.windows-test.yml  run-benchmark.sh
docs/: README.md  requirements.txt
docs/source/: advanced.rst  api.rst  conf.py  index.rst  installation.rst  quickstart.rst
examples/: .env.example  advanced_features.py  async_example.py  basic_usage.py  http2_example.py  proxy_example.py
hooks/: pre-commit
include/: boringssl_compat.h  httpmorph.h
scripts/: check_windows_compat.sh  dev-setup.sh  setup_vendors.sh  test_linux_build_local.sh  test_local_build.py  test_macos_build_local.sh  test_windows_build_local.ps1  test_windows_build_local.sh
scripts/darwin/: setup.py  setup_vendors.sh  test_build_local.sh
scripts/linux/: setup.py  setup_vendors.sh  test_build_local.sh
scripts/windows/: setup.py  setup_vendors.sh  test_build_local.sh  test_windows_build_local.ps1
src/bindings/: _async.pyx  _http2.cpp  _http2.pyx  _httpmorph.pyx
src/core/: async_request.c  async_request.h  async_request_manager.c  async_request_manager.h  boringssl_wrapper.cc  buffer_pool.c  buffer_pool.h  client.c  compression.c  connection_pool.c  connection_pool.h  cookies.c  core.c  http1.c  http2_client.c  http2_client.h  http2_logic.c  http2_session_manager.c  http2_session_manager.h  httpmorph.c  io_engine.c  io_engine.h  iocp_dispatcher.c  iocp_dispatcher.h  network.c  proxy.c  request.c  request_builder.c  request_builder.h  response.c  session.c  string_intern.c  string_intern.h  tls.c  url.c  util.c
src/core/internal/: client.h  compression.h  cookies.h  core.h  http1.h  http2_logic.h  internal.h  network.h  proxy.h  request.h  response.h  session.h  tls.h  url.h  util.h
src/httpmorph/: __init__.py  _async.py  _async_client.py  _client_c.py
src/include/: windows_compat.h
src/tls/: browser_profiles.c  browser_profiles.h
tests/: __init__.py  conftest.py  test_basic.py  test_browser_profiles.py  test_buffer_reallocation.py  test_client.py  test_connection_pool.py  test_edge_cases_security.py  test_errors.py  test_http2.py  test_integration.py  test_mock_server.py  test_proxy.py  test_proxy_server.py  test_requests_advanced.py  test_requests_compat.py  test_server.py  test_session.py  test_unicode.py
